Creation component navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div id="fullpage">
   <div class="section active"><app-home-page></app-home-page></div>
   <div class="section"><app-about-page></app-about-page></div>
