--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>navbar works!</p>
+<div id="container-navbar">
+  <div class="nav-left">
+    <mat-icon>terminal</mat-icon>
+    <span>DVLPR</span>
+  </div>
+  <div class="nav-right">
+    <button class="contact-button">Contato</button>
+  </div>
+</div>
