--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -36,6 +36,7 @@
 
   .base-info-home-page {
     width: 100%;
+    max-width: 850px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -106,6 +107,7 @@
   .image-home-page {
     background: transparent;
     width: 100%;
+    max-width: 600px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,6 +116,8 @@
 
     img {
       background: transparent;
+      max-width: 500px;
+      height: auto;
       position: static !important;
       object-fit: contain;
       display: block;
@@ -146,15 +150,14 @@
   position: absolute;
   width: 150px;
   height: 150px;
-  top: 600px;
-  left: 15%;
-  opacity: 0.7;
+  top: 650px;
+  left: 5%;
   pointer-events: none;
 
   img {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    filter: blur(2px);
+    filter: blur(1px);
   }
 }
