Creation service and logic navigation buttons

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,6 @@
     <span>DVLPR</span>
   </div>
   <div class="nav-right">
-    <button class="contact-button">Contato</button>
+    <button class="contact-button" (click)="scrollToContact()">Contato</button>
   </div>
 </div>
