--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,12 @@
   <div class="section"><app-about-page></app-about-page></div>
   <div class="section"><app-projects-page></app-projects-page></div>
   <div class="section"><app-contact-page></app-contact-page></div>
-  <div class="section">
-    <div class="slide"> Slide 1 </div>
-    <div class="slide"> Slide 2 </div>
-    <div class="slide"> Slide 3 </div>
-    <div class="slide"> Slide 4 </div>
-  </div>
+<!--  <div class="section">-->
+<!--    <div class="slide"> Slide 1 </div>-->
+<!--    <div class="slide"> Slide 2 </div>-->
+<!--    <div class="slide"> Slide 3 </div>-->
+<!--    <div class="slide"> Slide 4 </div>-->
+<!--  </div>-->
 </div>
 
 
