Creation and modify about page

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,3 +1,92 @@
 <div id="container-about-page">
-  <p>about-page works!</p>
+  <div class="about-bg">
+    <img src="assets/home/PCsemFundo.png" alt="Minha Foto" title="">
+  </div>
+  <div class="about-content">
+    <div class="about-box">
+      <h1 class="font-60">
+        <div class="title-about-page">
+          <span>O</span>
+          <span>l</span>
+          <span>á</span>
+          <span>,</span>
+        </div>
+        <div class="title-about-page">
+          <span>M</span>
+          <span>e</span>
+          <span>u</span>
+        </div>
+        <div class="title-about-page">
+          <span>N</span>
+          <span>o</span>
+          <span>m</span>
+          <span>e</span>
+        </div>
+        <div class="title-about-page">
+          <span>é</span>
+        </div>
+        <div class="title-about-page">
+          <span>L</span>
+          <span>u</span>
+          <span>c</span>
+          <span>a</span>
+          <span>s</span>
+          <span>,</span>
+        </div>
+        <div class="title-about-page">
+          <span>S</span>
+          <span>o</span>
+          <span>u</span>
+        </div>
+        <div class="title-about-page">
+          <span>U</span>
+          <span>m</span>
+        </div>
+        <div class="title-about-page">
+          <span>D</span>
+          <span>e</span>
+          <span>s</span>
+          <span>e</span>
+          <span>n</span>
+          <span>v</span>
+          <span>o</span>
+          <span>l</span>
+          <span>v</span>
+          <span>e</span>
+          <span>d</span>
+          <span>o</span>
+          <span>r</span>
+        </div>
+        <div class="title-about-page">
+          <span>W</span>
+          <span>e</span>
+          <span>b</span>
+        </div>
+      </h1>
+
+      <div class="subtitle-about-page">
+      <span>
+        Front End Specialist / Angular & TypeScript Expert /
+        NgRx Enthusiast / React Learner / Testing with Cypress
+        & Karma
+      </span>
+      </div>
+    </div>
+    <div class="description-about-page">
+      <span>
+        Profissionalmente imerso na indústria de desenvolvimento
+        web.
+      </span>
+      <span>
+        Sou um solucionador de problemas, altamente organizado,
+        leal e atento aos detalhes. Apaixonado por atividades ao ar
+        livre, videogames, filmes, séries, e, claro, programação.
+      </span>
+      <span>
+        Estou sempre buscando expandir meu conhecimento no universo
+        front-end e colaborando em projetos desafiadores com pessoas
+        incríveis.
+      </span>
+    </div>
+  </div>
 </div>
