--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div id="container-navbar">
-  <div class="nav-left">
-    <mat-icon>terminal</mat-icon>
+  <div class="nav-left" (click)="scrollToHome()">
+    <img src="assets/gif-code.gif" alt="DVLPR" title=""/>
     <span>DVLPR</span>
   </div>
   <div class="nav-right">
