--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 30px;
   background: transparent;
   z-index: 10;
 
@@ -16,18 +16,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 
-    mat-icon {
-      font-size: 40px;
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
+    img {
+      width: 40px;
+      height: 40px;
+      border-radius: 5px;
     }
 
     span {
       font-size: 32px;
       font-family: var(--font-secondary), sans-serif;
       font-weight: bold;
+      padding-left: 20px;
     }
   }
 
