Implementation of button Github

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div id="container-footer">
+  <a href="https://github.com/LukyEnd" target="_blank">
+    <img ngSrc="assets/github.png" alt="GitHub" height="350" width="350">
+  </a>
+</div>
