--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,13 +1,13 @@
 #container-navbar {
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 0;
-  width: 97vw;
+  width: 91vw;
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 30px;
+  padding: 10px 55px;
   background: transparent;
   z-index: 10;
 
@@ -19,8 +19,8 @@
     cursor: pointer;
 
     img {
-      width: 40px;
-      height: 40px;
+      width: 35px;
+      height: 35px;
       border-radius: 5px;
     }
 
@@ -34,13 +34,13 @@
 
   .nav-right {
     .contact-button {
-      padding: 8px 16px;
+      padding: 15px 30px;
       background: none;
       border: 2px solid var(--highlight-color);
       color: var(--highlight-color);
       font-size: 16px;
       cursor: pointer;
-      border-radius: 5px;
+      border-radius: 8px;
       transition: all 0.3s ease-in-out;
     }
 
