Creation and implementation skills page

--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -65,6 +65,7 @@
             display: inline-block;
             font-size: var(--font-size-small);
             transition: waterDrop 0.3s ease-out;
+            cursor: default;
           }
 
           span:hover {
