--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,19 @@
 <div id="fullpage">
   <div class="section active"><app-home-page></app-home-page></div>
   <div class="section"><app-about-page></app-about-page></div>
+  <div class="section"><app-skills-page></app-skills-page></div>
   <div class="section"><app-projects-page></app-projects-page></div>
   <div class="section"><app-contact-page></app-contact-page></div>
+</div>
+
+<app-footer></app-footer>
+
+
+
+
 <!--  <div class="section">-->
 <!--    <div class="slide"> Slide 1 </div>-->
 <!--    <div class="slide"> Slide 2 </div>-->
 <!--    <div class="slide"> Slide 3 </div>-->
 <!--    <div class="slide"> Slide 4 </div>-->
 <!--  </div>-->
-</div>
-
-<app-footer></app-footer>
-
-
