--- a/src/app/pages/skills-page/skills-page.component.html
+++ b/src/app/pages/skills-page/skills-page.component.html
@@ -38,7 +38,13 @@
       Estou sempre em busca de novos desafios e aprendizados.
     </span>
     <span>
-      Confira meu <a href="https://www.linkedin.com/in/lucas-sanches-cavalheiro/"> LinkedIn </a> para mais detalhes.
+      Confira meu
+      <a href="https://www.linkedin.com/in/lucas-sanches-cavalheiro/"
+         target="_blank"
+         rel="noopener noreferrer">
+        LinkedIn
+      </a>
+      para mais detalhes.
     </span>
   </div>
 
