--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,27 @@
-<app-navbar></app-navbar>
+<div class="container-app-component">
+  <app-navbar></app-navbar>
 
-<div id="fullpage">
-  <div class="section active"><app-home-page></app-home-page></div>
-  <div class="section"><app-about-page></app-about-page></div>
-  <div class="section"><app-skills-page></app-skills-page></div>
-  <div class="section"><app-projects-page></app-projects-page></div>
-  <div class="section"><app-contact-page></app-contact-page></div>
+
+  <div id="fullpage">
+    <div class="section active">
+      <app-home-page></app-home-page>
+    </div>
+    <div class="section">
+      <app-about-page></app-about-page>
+    </div>
+    <div class="section">
+      <app-skills-page></app-skills-page>
+    </div>
+    <div class="section">
+      <app-projects-page></app-projects-page>
+    </div>
+    <div class="section">
+      <app-contact-page></app-contact-page>
+    </div>
+  </div>
+
+  <app-footer></app-footer>
 </div>
-
-<app-footer></app-footer>
-
-
 
 
 <!--  <div class="section">-->
