Refactor: Create global CSS and remove duplicate styles

--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -4,9 +4,7 @@
   </div>
 
   <div class="contact-info">
-<!--    <h2>Vamos Conversar!</h2>-->
-
-    <h2 class="font-60">
+    <h1 class="font-60">
       <div class="title-contact-page">
         <span>V</span>
         <span>a</span>
@@ -26,11 +24,8 @@
         <span>r</span>
         <span>!</span>
       </div>
-    </h2>
-
-
-
-    <span>
+    </h1>
+    <span class="description-contact-page">
       Se você está pronto para iniciar um novo projeto, discutir ideias ou
       mesmo só para um bate-papo, estou à disposição. Fique à vontade para
       entrar em contato comigo!
