--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,6 +1,6 @@
 <div id="container-about-page">
   <div class="about-bg">
-    <img src="assets/home/PCsemFundo.png" alt="Minha Foto" title="">
+    <img ngSrc="assets/home/PCsemFundo.png" alt="Minha Foto" title="" height="1140" width="980">
   </div>
   <div class="about-content">
     <div class="about-box">
