--- a/src/app/pages/contact-page/contact-page.component.scss
+++ b/src/app/pages/contact-page/contact-page.component.scss
@@ -1,90 +1,16 @@
 #container-contact-page {
-  background-color: rgb(20, 20, 22);
-  color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  min-height: 100vh;
-  width: 100vw;
-  justify-content: space-between;
-  padding: 5vh 5vw;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  box-sizing: border-box;
-
   .contact-image {
-    flex: 1;
-    max-width: 45%;
-    text-align: center;
-
     img {
       max-width: 100%;
-      height: auto;
-      object-fit: contain;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
   }
 
   .contact-info {
-    flex: 1;
-    max-width: 50%;
+    max-width: 35%;
     cursor: default;
 
-    h2 {
-      width: 100%;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      font-size: var(--font-size-large);
-      line-height: 28px;
-      text-align: center;
-
-      .title-contact-page {
-        display: inline-block;
-        margin: 0 15px 10px 0;
-        overflow: visible;
-
-        span {
-          display: inline-block;
-          font-size: var(--font-size-small);
-          transition: waterDrop 0.3s ease-out;
-        }
-
-        span:hover {
-          color: var(--highlight-color);
-          animation: waterDrop 0.3s ease-in-out forwards;
-        }
-      }
-    }
-
-    span {
-      display: block;
-      margin-bottom: 15px;
-      padding: 5px 0;
-      font-family: var(--font-secondary), sans-serif;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      font-size: var(--font-size-medium);
-      line-height: 24px;
-      color: var(--description-color);
-    }
-
-    .contact-details {
-      span {
-        font-size: 1.1rem;
-        color: var(--text-color);
-      }
-
-      a {
-        color: var(--highlight-color);
-        text-decoration: none;
-        transition: color 0.3s ease-in-out;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
+    .description-contact-page {
+      margin: 35px 0;
     }
   }
 }
