Arranging and adding transitions and effects to pages

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -2,7 +2,7 @@
   <div class="about-bg">
     <img ngSrc="assets/home/PCsemFundo.png" alt="Minha Foto" title="" height="1140" width="980">
   </div>
-  <div class="about-content">
+  <div class="about-content animate__animated animate__fade">
     <div class="about-box">
       <h1 class="font-60">
         <div class="title-about-page">
@@ -12,18 +12,9 @@
           <span>,</span>
         </div>
         <div class="title-about-page">
-          <span>M</span>
-          <span>e</span>
-          <span>u</span>
-        </div>
-        <div class="title-about-page">
-          <span>N</span>
+          <span>S</span>
           <span>o</span>
-          <span>m</span>
-          <span>e</span>
-        </div>
-        <div class="title-about-page">
-          <span>é</span>
+          <span>u</span>
         </div>
         <div class="title-about-page">
           <span>L</span>
@@ -32,11 +23,6 @@
           <span>a</span>
           <span>s</span>
           <span>,</span>
-        </div>
-        <div class="title-about-page">
-          <span>S</span>
-          <span>o</span>
-          <span>u</span>
         </div>
         <div class="title-about-page">
           <span>U</span>
@@ -64,7 +50,7 @@
         </div>
       </h1>
 
-      <div class="subtitle-about-page">
+      <div class="subtitle-about-page animate__animated animate__fadeInUp animate__delay-1s">
       <span>
         Front End Specialist / Angular & TypeScript Expert /
         NgRx Enthusiast / React Learner / Testing with Cypress
@@ -72,7 +58,7 @@
       </span>
       </div>
     </div>
-    <div class="description-about-page">
+    <div class="description-about-page animate__animated animate__fadeInUp animate__delay-2s">
       <span>
         Profissionalmente imerso na indústria de desenvolvimento
         web.
