--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,10 +1,10 @@
 <div id="container-contact-page">
-  <div class="contact-image">
+  <div class="contact-image animate__animated animate__slideInTop">
     <img ngSrc="/assets/home/PCsemFundo.png" alt="Imagem de contato" height="400" width="400">
   </div>
 
   <div class="contact-info">
-    <h1 class="font-60">
+    <h1 class="font-60 animate__animated animate__slideInTop">
       <div class="title-contact-page">
         <span>V</span>
         <span>a</span>
@@ -25,12 +25,12 @@
         <span>!</span>
       </div>
     </h1>
-    <span class="description-contact-page">
+    <span class="description-contact-page animate__animated animate__slideInTop animate__delay-1s">
       Se você está pronto para iniciar um novo projeto, discutir ideias ou
       mesmo só para um bate-papo, estou à disposição. Fique à vontade para
       entrar em contato comigo!
     </span>
-    <div class="contact-details">
+    <div class="contact-details animate__animated animate__slideInBottom animate__delay-2s">
       <span>
         <strong>Email: </strong>
         <a [href]="'mailto:' + emailUser">{{ emailUser }}</a>
