--- a/src/app/pages/contact-page/contact-page.component.scss
+++ b/src/app/pages/contact-page/contact-page.component.scss
@@ -8,6 +8,7 @@
   .contact-info {
     max-width: 35%;
     cursor: default;
+    margin-left: 100px;
 
     .description-contact-page {
       margin: 35px 0;
