--- a/src/app/pages/skills-page/skills-page.component.html
+++ b/src/app/pages/skills-page/skills-page.component.html
@@ -1,5 +1,5 @@
 <div id="container-skill-page">
-  <h1 class="font-60">
+  <h1 class="font-60 animate__animated animate__slideInBottom">
     <div class="title-skill-page">
       <span>S</span>
       <span>k</span>
@@ -27,7 +27,7 @@
     </div>
   </h1>
 
-  <div class="description-skill-page">
+  <div class="description-skill-page animate__animated animate__slideInTop animate__delay-1s">
     <span>
       Minha especialização é no desenvolvimento front-end, com experiência sólida
       em HTML, CSS, JavaScript e criação de aplicações web interativas. Sou
@@ -48,7 +48,7 @@
     </span>
   </div>
 
-  <div class="skills-page">
+  <div class="skills-page animate__animated animate__slideInTop animate__delay-2s">
     <img ngSrc="/assets/skills/adobe-xd.png" alt="" height="70" width="70">
     <img ngSrc="/assets/skills/angular.png" alt="" height="70" width="70">
     <img ngSrc="/assets/skills/angular-material.png" alt="" height="70" width="70">
