--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,15 +1,16 @@
 #container-footer {
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   left: 30px;
   background: transparent;
+  z-index: 9999;
 
   a {
     display: inline-block;
 
     img {
-      width: 50px;
-      height: 50px;
+      width: 70px;
+      height: 70px;
       opacity: 0.7;
       transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 
@@ -20,3 +21,4 @@
     }
   }
 }
+
