--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,8 +1,8 @@
 #container-navbar {
-  position: absolute;
+  position: fixed;
   top: 20px;
   left: 0;
-  width: 91vw;
+  width: 100%;
   height: 60px;
   display: flex;
   justify-content: space-between;
