--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -22,6 +22,8 @@
 
   .about-content {
     position: relative;
+    width: 100%;
+    max-width: 70%;
     z-index: 2;
     display: flex;
     flex-direction: row;
