--- a/src/app/pages/base.scss
+++ b/src/app/pages/base.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
   height: 100vh;
   padding: 5vh 5vw;
