--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
   <img ngSrc="assets/home/bottom-code.png" alt="" title="" fill>
 </div>
 <div id="container-home-page">
-  <div class="base-info-home-page">
+  <div class="base-info-home-page animate__animated animate__fadeIn">
     <h1 class="font-60">
       <div class="title-home-page">
         <span>F</span>
@@ -38,7 +38,7 @@
       </div>
     </h1>
 
-    <div class="description-home-page">
+    <div class="description-home-page animate__animated animate__fadeInUp animate__delay-2s">
       <span>
         Transformo desafios em soluções práticas e eficientes,
         criando interfaces limpas e interativas. Foco no
@@ -48,8 +48,7 @@
       </span>
     </div>
 
-    <button class="button-about-me-home-page"
-            (click)="toggle()">
+    <button class="button-about-me-home-page animate__animated animate__fadeInUp animate__delay-3s" (click)="toggle()">
       Sobre mim
       <mat-icon>
         {{ isOpen ? 'keyboard_arrow_down' : 'chevron_right' }}
@@ -57,8 +56,7 @@
     </button>
   </div>
 
-
-  <div class="image-home-page">
+  <div class="image-home-page animate__animated animate__fadeInRight animate__delay-1s">
     <img ngSrc="assets/home/PCsemFundo.png" alt="" title="" fill>
   </div>
 </div>
