--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,11 +1,11 @@
 #background-home-page {
-  position: fixed;
+  position: absolute;
   top: 50%;
-  left: 50%;
+  left: 52%;
   width: 97%;
   height: 100%;
   transform: translate(-50%, -50%);
-  z-index: 1;
+  z-index: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@
 
   img {
     width: 100%;
-    max-width: 75%;
+    max-width: 95%;
     height: 100%;
     object-fit: contain;
     filter: blur(7px);
@@ -25,7 +25,7 @@
 #container-home-page {
   .base-info-home-page {
     width: 100%;
-    max-width: 850px;
+    max-width: 575px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -85,7 +85,8 @@
 
 #icon-home-page {
   position: absolute;
-  width: 150px;
+  width: 100%;
+  max-width: 150px;
   height: 150px;
   top: 650px;
   left: 5%;
