--- a/src/app/pages/skills-page/skills-page.component.scss
+++ b/src/app/pages/skills-page/skills-page.component.scss
@@ -10,7 +10,7 @@
   justify-content: center;
 
   h1 {
-    margin: 0;
+    margin: 0 0 10px 0;
     display: flex;
     flex-wrap: wrap;
     font-size: var(--font-size-large);
@@ -39,8 +39,11 @@
   .description-skill-page {
     width: 100%;
     max-width: 60%;
-    padding: 20px 0;
-    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0 80px 0;
 
     span {
       text-align: center;
@@ -64,6 +67,7 @@
 
     img {
       margin: 10px;
+      --animate-delay: 0.5s;
     }
   }
 }
