Fixing fullpage initialization error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <div class="container-app-component">
   <app-navbar></app-navbar>
 
-
   <div id="fullpage">
-    <div class="section active">
+    <div class="section">
       <app-home-page></app-home-page>
     </div>
     <div class="section">
