--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,66 +1,42 @@
 <div id="background-home-page">
-  <img ngSrc="assets/home/bottom-code.png" alt="" title="" fill>
+  <img [ngSrc]="homePageData.backgroundImage.src"
+       [alt]="homePageData.backgroundImage.alt"
+       [title]="homePageData.backgroundImage.alt"
+       fill>
 </div>
 <div id="container-home-page">
   <div class="base-info-home-page animate__animated animate__fadeIn">
     <h1 class="font-60">
       <div class="title-home-page">
-        <span>F</span>
-        <span>r</span>
-        <span>o</span>
-        <span>n</span>
-        <span>t</span>
-        <span>-</span>
-        <span>E</span>
-        <span>n</span>
-        <span>d</span>
+        <span *ngFor="let frontEnd of homePageData.title.frontEnd">{{ frontEnd }}</span>
       </div>
       <div class="title-home-page">
-        <span>S</span>
-        <span>o</span>
-        <span>f</span>
-        <span>t</span>
-        <span>w</span>
-        <span>a</span>
-        <span>r</span>
-        <span>e</span>
+        <span *ngFor="let software of homePageData.title.software">{{ software }}</span>
       </div>
       <div class="title-home-page">
-        <span>D</span>
-        <span>e</span>
-        <span>v</span>
-        <span>e</span>
-        <span>l</span>
-        <span>o</span>
-        <span>p</span>
-        <span>e</span>
-        <span>r</span>
+        <span *ngFor="let developer of homePageData.title.developer">{{ developer }}</span>
       </div>
     </h1>
-
     <div class="description-home-page animate__animated animate__fadeInUp animate__delay-2s">
-      <span>
-        Transformo desafios em soluções práticas e eficientes,
-        criando interfaces limpas e interativas. Foco no
-        desenvolvimento de aplicações web rápidas, responsivas
-        e adaptáveis, sempre visando uma experiência digital
-        fluida e inovadora.
-      </span>
+      <span *ngFor="let paragraph of homePageData.description">{{ paragraph }}</span>
     </div>
-
     <button class="button-about-me-home-page animate__animated animate__fadeInUp animate__delay-3s" (click)="toggle()">
-      Sobre mim
+      {{ homePageData.aboutMe }}
       <mat-icon>
         {{ isOpen ? 'keyboard_arrow_down' : 'chevron_right' }}
       </mat-icon>
     </button>
   </div>
-
   <div class="image-home-page animate__animated animate__fadeInRight animate__delay-1s">
-    <img ngSrc="assets/home/PCsemFundo.png" alt="" title="" fill>
+    <img [ngSrc]="homePageData.mainImage.src"
+         [alt]="homePageData.mainImage.alt"
+         [title]="homePageData.mainImage.alt"
+         fill>
   </div>
 </div>
-
 <div id="icon-home-page">
-  <img ngSrc="assets/home/desenvolvedor.png" alt="" title="" fill>
+  <img [ngSrc]="homePageData.iconImage.src"
+       [alt]="homePageData.iconImage.alt"
+       [title]="homePageData.iconImage.alt"
+       fill>
 </div>
