--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -6,10 +6,6 @@
   height: 100%;
   transform: translate(-50%, -50%);
   z-index: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
 
   img {
     width: 100%;
@@ -86,9 +82,9 @@
 #icon-home-page {
   position: absolute;
   width: 100%;
-  max-width: 150px;
-  height: 150px;
-  top: 650px;
+  max-width: 120px;
+  height: 120px;
+  top: 70%;
   left: 5%;
   pointer-events: none;
 
@@ -96,6 +92,55 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-    filter: blur(1px);
+    filter: blur(2px);
+    opacity: 0.5;
+  }
+}
+
+@media (max-width: 600px) {
+  #container-home-page {
+    display: flex !important;
+    flex-direction: column-reverse !important;
+    justify-content: space-evenly !important;
+    align-items: center !important;
+
+    h1 {
+      .title-home-page {
+        margin: 0 5px 2px 0 !important;
+      }
+
+      span {
+        font-size: 24px !important;
+      }
+    }
+
+    .base-info-home-page {
+      height: auto;
+      min-width: 350px;
+      padding-top: 0;
+
+      .description-home-page {
+        margin: 0;
+        padding: 5px 0;
+        font-size: 14px;
+      }
+
+      .button-about-me-home-page {
+        font-size: 14px;
+      }
+    }
+
+    .image-home-page {
+      img {
+        max-width: 50%;
+      }
+    }
+  }
+
+  #icon-home-page {
+    max-width: 50px;
+    height: 50px;
+    top: 80%;
+    left: 70%;
   }
 }
