--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -35,6 +35,7 @@
     .about-box {
       width: 100%;
       max-width: 800px;
+      min-width: 300px;
 
       .subtitle-about-page {
         padding: 20px 0;
@@ -47,10 +48,67 @@
 
     .description-about-page {
       max-width: 600px;
+      min-width: 400px;
+
+      .read-more-button {
+        width: 100%;
+        color: var(--highlight-color);
+        font: inherit;
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        font-size: var(--font-size-medium);
+        font-weight: 600;
+        letter-spacing: 1px;
+        transition: color 0.3s ease-in-out;
+      }
 
       span {
         display: block;
         margin-bottom: 15px;
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  #container-about-page {
+    h1 {
+      .title-about-page {
+        margin: 0 5px 2px 0 !important;
+      }
+
+      span {
+        font-size: 24px !important;
+      }
+    }
+
+    .about-content {
+      max-width: 85%;
+      padding: 0;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0;
+
+      .about-box {
+        max-width: unset;
+        min-width: 190px;
+
+        .subtitle-about-page {
+          font-size: 14px;
+        }
+      }
+
+      .description-about-page {
+        max-width: unset;
+        min-width: 190px;
+
+        span {
+          font-size: 14px;
+        }
       }
     }
   }
